| Summary: | ASTERISK-25410: app_record: RECORDED_FILE variable not being populated | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2015-09-21 17:22:21 | Date Closed: | 2015-09-22 07:43:10 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_record |
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The RECORDED_FILE variable is empty unless a '%d' is specified in the filename. This variable should be set regardless.
Dialplan to reproduce: {code} exten => 999,1,NoOp() same => n,Record(test.gsm,9999, 9999) same => n,NoOp(Recorded file = ${RECORDED_FILE}) same => n,NoOp(Record status = ${RECORD_STATUS}) same => n,Hangup() {code} | ||
| Comments: | |||